# kolibri

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
Client/: CMakeLists.txt  README.md
Client/src/: client.cpp  client.h  main.cpp  randommessage.cpp  randommessage.h
Server/: .qmlls.ini  CMakeLists.txt  README.md
Server/frontend/: Footer.qml  Logs.qml  Main.qml  TableClients.qml
Server/src/: core.cpp  core.h  entities.h  main.cpp
Server/src/server/: server.cpp  server.h
Server/src/storage/: modellogs.cpp  modellogs.h  storage.cpp  storage.h  tablemodelclients.cpp  tablemodelclients.h
